--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 numpy==1.26.4
-pandas==2.2.1
+pandas~=2.0.3
 python-dateutil==2.9.0.post0
 pytz==2024.1
 six==1.16.0
 tzdata==2024.1
-matplotlib~=3.8.3
-seaborn~=0.13.2
+matplotlib~=3.7.2
+seaborn~=0.12.2
+geopandas~=0.14.2
